# 2DCalibFusion

./: CMakeLists.txt  README.md  package.xml
config/: hector_slam.rviz  param.yaml  param_dataset.yaml  slam.rviz
data/: bias.csv  true_bias.csv
include/: UtilFunctions.h  frame.hpp  pose_2d.hpp  utility.hpp
include/Estimator/: dead_reckoning.hpp  initialize.hpp  motion_calc.hpp
include/Map/: GridMapPyramid.hpp  MapProcContainer.h  MapRepresentationInterface.h
include/ScanMatch/: hector_matcher.hpp
include/calibration/: 2d_handeye_calibration.hpp  diff_robot_intrinsic_calib.hpp  imu_calibration.hpp  mecanum_robot_intrinsic_calib.hpp  robot_instrinc_calib_base.hpp
include/lesson4/hector_mapping/: hector_mapping.h  hector_slam.h  tic_toc.h
include/lesson4/hector_mapping/Estimator/: MapProcContainer.h  MapRepMultiMap.h  MapRepresentationInterface.h  estimator.hpp  motionModel.hpp  predictor.hpp  state.hpp
include/lesson4/hector_mapping/Estimator/Filter/: ekf_estimator.hpp
include/lesson4/hector_mapping/Estimator/Initialize/: 2d_imu_initialize.hpp
include/lesson4/hector_mapping/Estimator/Kalman/: common.hpp  ekf_estimator.hpp
include/lesson4/hector_mapping/Lib/Algorithm/Calibration/: 2d_handeye_calibration.hpp
include/lesson4/hector_mapping/Lib/Algorithm/Pointcloud/: laserUndistorted.hpp
include/lesson4/hector_mapping/Map/: OccGridMapUtil.h
include/lesson4/hector_mapping/ScanMatcher/: hectorScanMatcher.hpp  hectorScanMatcher_1.hpp
include/lesson4/hector_mapping/Sensor/: SensorData.hpp
include/lesson4/hector_mapping/Type/: Pose2d.hpp
include/lesson4/hector_mapping/util/: DataDispatcher.hpp  RemoveReference.hpp  utility.hpp
include/preprocess/: laser_undistortion.hpp
include/sensor/: sensor_data_type.hpp
launch/: dataset_frontend.launch  dataset_frontend_view.launch  frontend.launch  frontend_view.launch  fusion_odometry.launch  hector_slam.launch  lidar_undistortion.launch
src/FrontEnd2D/: CMakeLists.txt
src/FrontEnd2D/include/Estimator/: GridMapPyramid.hpp  MapProcContainer.h  MapRepMultiMap.h  MapRepresentationInterface.h  OccGridMapOperation.hpp  estimator.hpp  motionModel.hpp
src/FrontEnd2D/include/Estimator/Calibration/: 2d_handeye_calibration.hpp
src/FrontEnd2D/include/Estimator/Initialize/: 2d_imu_initialize.hpp
src/FrontEnd2D/include/Estimator/Kalman/: common.hpp  ekf_estimator.hpp
src/FrontEnd2D/include/FrontEnd2D/Estimator/: estimator.hpp  motionModel.hpp
src/FrontEnd2D/include/FrontEnd2D/Estimator/Calibration/: 2d_handeye_calibration.hpp  laser_wheel_calibration.hpp
src/FrontEnd2D/include/FrontEnd2D/Estimator/Initialize/: 2d_imu_initialize.hpp
src/FrontEnd2D/include/FrontEnd2D/Estimator/Kalman/: common.hpp  ekf_estimator.hpp
src/FrontEnd2D/include/FrontEnd2D/Estimator/Sensor/: 2d_imu_tool.hpp
src/FrontEnd2D/include/FrontEnd2D/util/: DataDispatcher.hpp  Function.hpp  TypeJudge.hpp  fileManager.hpp  utility.hpp
src/FrontEnd2D/include/Lib/Algorithm/Pointcloud/ScanMatcher/: GridScanMatcherBase.hpp  hectorScanMatcher.hpp  imls_icp.h
src/FrontEnd2D/include/Map/: GridMap.h  GridMapBase.h  GridMapCacheArray.h  GridMapLogOdds.h  MapDimensionProperties.h  OccGridMapBase.h  OccGridMapUtil.h  PointcloudLocalMapBase.hpp  TimedSlidingLocalMap.hpp
src/FrontEnd2D/include/Sensor/: LaserPointContainer.h
src/FrontEnd2D/include/Type/: Pose2d.hpp  color.hpp
src/FrontEnd2D/include/util/: DataDispatcher.hpp  Function.hpp  TypeJudge.hpp  UtilFunctions.h  fileManager.hpp  utility.hpp
src/FrontEnd2D/src/: estimator.cpp  imls_icp.cpp
src/Lib/libpointmatcher-master/contrib/: CMakeLists.txt
src/hector_mapping/: hector_mapping.cc  hector_slam.cc
src/preprocess/: laser_preprocess_node.cpp
src/ros_wrapper/: CMakeLists.txt
src/ros_wrapper/include/: ros_util.h  slam2d_node.h
src/ros_wrapper/src/: slam2d_node.cc
src/sensor_fusion/: filter_fusion_odometry_node.cpp  optimization_fusion_odometry_node.cpp  simple_fusion_node.cpp
src/test/: test_camera.cpp  test_data_dispatcher.cpp  test_rot_2d.cpp
